# pull-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pull_ai_confluence_design.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pull_cli/: __init__.py  assets.py  attachment_extractors.py  cli.py  config.py  crawler.py  envelope.py  errors.py  extractor.py  guide.py  html_normalizer.py  links.py  macros.py  markdown_writer.py  models.py  paths.py  resolver.py  security.py  validator.py  writer.py
src/pull_cli/clients/: __init__.py  base.py  cloud_v2.py  data_center.py  hybrid.py
tests/: __init__.py  conftest.py  generate_fixture_output.py  test_cli.py  test_clients.py  test_config.py  test_extraction.py  test_resolver.py
